# My_Thesis_Repo

./: .gitignore  create_graph.py  example_train.txt  fine_tune_vit.py  graph_diag.py  matrix_creation.py  pyproject.toml  requirements.txt  test.py  test2.py  test3.py  train.py  train2.py  train3.py
configs/: test-backup.yaml  test2.yaml  test3.yaml  train-backup.yaml  train.yaml  train2.yaml  train3.yaml
helpers/: create_spatial_edges.py  dataset_loader.py  my_dataset.py
models/: final.py  final2.py  model1.py  model10.py  model11.py  model12.py  model13.py  model2.py  model3.py  model4.py  model5.py  model6.py  model7.py  model8.py  model9.py  tmp.py
rearrange/: create_graph.py  process_dfdc.py  rearrange.py
rearrange/dataset_json/: UADFV.json
